fix table alignment

--- a/css/main.css
+++ b/css/main.css
@@ -789,3 +789,11 @@ th {
     font-size: 0.9rem;
   }
 }
+
+.align-right {
+  text-align: right;
+}
+
+.align-left {
+  text-align: left;
+}
